--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.0.1",
-    "node-dev": "^8.0.0"
+    "googleapis": "^135.0.0",
+    "node-dev": "^8.0.0",
+    "nodemailer": "^6.9.13"
   }
 }
